--- a/src/components/Background/styles.css
+++ b/src/components/Background/styles.css
@@ -7,12 +7,12 @@
     object-fit: cover;
   }
 
-  .teste{
+  .container-video{
     width: 100%;
     height: 100%;
   }
 
-  .teste img{
+  .container-video img{
     display: block;
     width: 100%;
     height: 100%;
